--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.png" />
+    <link rel="icon" type="image" href="./src/assets/images/Group 4.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BlueBird Movies</title>
+    <title>Filmes</title>
   </head>
   <body>
     <div id="root"></div>
