--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="./src/assets/images/Group 4.png" />
+    <link rel="icon" type="image" href="./src/assets/img/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filmes</title>
   </head>
