--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="./src/assets/img/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Filmes</title>
+    <title>Flix</title>
   </head>
   <body>
     <div id="root"></div>
